
	Verified working on the following platforms:
	- Linux 2.2.14-5.0 i686
	- Linux 2.2.14 #5 SMP alpha
	- Linux 2.2.14-5.0smp sparc
	- AIX 3 4
	- SunOS 5.7 sun4u sparc SUNW,Ultra-Enterprise
	- OSF1 V4.0 alpha

Release 1.4

	Added RPM spec file.

	Fixed bug with opt_list dumping core on linux.
	
	Added pdsh -V to display version (PDSH_VERSION in conf.h).

	Changed wcoll logic on SP so pdsh -aiv drops nodes which have
	either switch_responds or host_responds false instead of falling
	back to the reliable_hostname.

	Added wcoll hack to deal with changed SDR attributes for Colony switch

Release 1.5

	Renamed spec file to pdsh.spec.  Gzip installed man pages on Linux.

	Moved path definitions to conf.h.  Changed nodeattr path to /usr/bin.

	Fixed handling of numerical ranges with multiple root names (dshbak)

	Fix %S handling to avoid truncating dotted quads (err.c)

	Rename pcp to pdcp - avoid conflict with SGI Performance Co-Pilot RPM.

	Updated RPM rules for chaos release.

Release 1.5+

	Call htons on hard-coded port numbers before using (rcmd.c, k4cmd.c)

	Renamed rcmd.c -> xrcmd.c, pipecmd.c -> sshcmd.c.

	Add -Wall to CFLAGS and eliminate all warnings on Linux.

	Updated to latest Chris Dunlap RPM Make target for Linux.

	Support signal propagation via rsh backchannel (dsh.c, xrcmd.c).

	Added a magic cookie check to xmalloc functions.

	Use memset instead of bzero.

	Added qshell support for running Quadrics Elan3 jobs on Linux
	with -E option and qshd server (added qshd subpackage to RPM target).

	Stderr socket now opened by default to enable proper remote cleanup
	after SIGINT.  The meaning of the -s option is reversed.
	(everywhere but AIX where cleanup seems to work without the extra sock)

	Added support for expansion of hostname ranges passed through -w
	(e.g. -w host1-5 means run on host1,host2,...,host5)

	Added new options -x and -X for disabling hostname range expansion
	and defining new expansion operator, respectively.