@@ -10,6 +10,7 @@ PDSH_OBJS=	list.o xmalloc.o xstring.o err.o \
 
 QSHD_OBJS=	list.o xmalloc.o xstring.o err.o qswutil.o qshd.o 
 QRUN_OBJS=	list.o xmalloc.o xstring.o err.o qswutil_main.o
+RMSTEST_OBJS=	list.o xmalloc.o xstring.o err.o qswutil_main2.o
 
 PREFIX=		/usr/local
 
@@ -24,9 +25,9 @@ PREFIX=		/usr/local
 #
 # Uncomment and set HAVE_ELAN3 to 1 in conf.h for Quadrics Elan support
 #
-ELAN_TARGS=	qshd qrun
+ELAN_TARGS=	qshd qrun rmstest
 ELAN_OBJS=	qswutil.o qcmd.o
-ELAN_LIB=	-lelan3 -lrmscall
+ELAN_LIB=	-lelan3 -lrmscall -lrmsapi -lrms
 ELAN_INC=
 
 # Solaris
@@ -51,8 +52,14 @@ qshd: $(QSHD_OBJS)
 qrun: $(QRUN_OBJS)
 	$(CC) -o $@ $(QRUN_OBJS) $(LIBS)
 
+rmstest: $(RMSTEST_OBJS)
+	$(CC) -o $@ $(RMSTEST_OBJS) $(LIBS)
+
 qswutil_main.o: qswutil.c
 	$(CC) -o $@ -c $(CFLAGS) -DTEST_MAIN qswutil.c
+
+qswutil_main2.o: qswutil.c
+	$(CC) -o $@ -c $(CFLAGS) -DTEST2_MAIN qswutil.c
 
 install:
 	install -m 4755 -o root -g root pdsh 	$(PREFIX)/bin/pdsh
