@@ -25,5 +25,7 @@ int 	qsw_init_capability(ELAN_CAPABILITY *cap, int nprocs,
 		list_t nodelist, int cyclic_alloc);
 int	qsw_get_prgnum(void);
 void 	qsw_setup_program(ELAN_CAPABILITY *cap, qsw_info_t *qi, uid_t uid);
+list_t	qsw_alloc(char *, uid_t, int, int, int *);
+void	qsw_free(int);
 
 #endif /* _QSWUTIL_INCLUDED */
